<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <include
        android:id="@+id/includeTop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/act_topbar" />

    <LinearLayout
        android:id="@+id/layBottom"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_round_bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnSumit"
            style="@style/btn_style_submit"
            android:text="@string/submit" 
            android:visibility="gone"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/layBottom"
        android:layout_below="@id/includeTop"
        android:background="#eeeee0" >

        <LinearLayout
            android:id="@+id/layMid"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize" >

            <RelativeLayout
                android:id="@+id/layownner"
                style="@style/input_style_edit" >

                <TextView
                    android:id="@+id/townner"
                    style="@style/textview_style_topic"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/ownner" />

                <TextView
                    android:id="@+id/tvownner"
                    style="@style/textview_style_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/townner" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/laydriver"
                style="@style/input_style_edit" >

                <TextView
                    android:id="@+id/tdriver"
                    style="@style/textview_style_topic"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/driver" />

                <TextView
                    android:id="@+id/tvdriver"
                    style="@style/textview_style_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/tdriver" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/laymodel"
                style="@style/input_style_edit" >

                <TextView
                    android:id="@+id/tmodel"
                    style="@style/textview_style_topic"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/model" />

                <TextView
                    android:id="@+id/tvmodel"
                    style="@style/textview_style_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/tmodel" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layprice"
                style="@style/input_style_edit" >

                <TextView
                    android:id="@+id/tprice"
                    style="@style/textview_style_topic"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/tvprice"
                    style="@style/textview_style_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/tprice" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/laycount"
                style="@style/input_style_edit" >

                <TextView
                    android:id="@+id/tcount"
                    style="@style/textview_style_topic"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/count" />

                <TextView
                    android:id="@+id/tvcount"
                    style="@style/textview_style_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/tcount" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/laygoal"
                style="@style/input_style_edit" >

                <TextView
                    android:id="@+id/tgoal"
                    style="@style/textview_style_topic"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/goal" />

                <Button
                    android:id="@+id/btnLocation"
                    style="@style/button_style_small"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/locate" />

                <TextView
                    android:id="@+id/tvgoal"
                    style="@style/textview_style_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/btnLocation"
                    android:layout_toRightOf="@id/tgoal"
                    android:maxLength="500"
                    android:minLines="1" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/laydeadline"
                style="@style/input_style_edit" >

                <TextView
                    android:id="@+id/tdeadline"
                    style="@style/textview_style_topic"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/dealine" />

                <TextView
                    android:id="@+id/tvdeadline"
                    style="@style/textview_style_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/tdeadline" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/laystate"
                style="@style/input_style_edit"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/tstate"
                        style="@style/textview_style_topic"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/state" />

                    <Button
                        android:id="@+id/btnCount"
                        style="@style/button_style_small"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/zero" />

                    <TextView
                        android:id="@+id/tvState"
                        style="@style/spinner_style"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/btnCount"
                        android:layout_toRightOf="@id/tstate"
                        android:entries="@array/array_state" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tvMessage"
                    style="@style/input_style_EditTextWithDel"
                    android:maxLength="800"
                    android:minLines="3" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>