<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <include
        android:id="@+id/includeTop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/act_topbar" />

    <LinearLayout
        android:id="@+id/layBottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_round_bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnResign"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn07"
            android:text="@string/signup"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/laymiddle"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/layBottom"
        android:layout_below="@id/includeTop"
        android:background="#eeeee0"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_edit" >

            <TextView
                android:id="@+id/tvname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/name"
                android:textColor="#C1CDCD"
                android:textSize="20sp" />

            <com.model.tool.view.MTEditTextWithDel
                android:id="@+id/etname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10sp"
                android:layout_toRightOf="@id/tvname"
                android:background="@null"
                android:hint="@string/input"
                android:inputType="text"
                android:singleLine="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_edit" >

            <TextView
                android:id="@+id/tvtel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/tel"
                android:textColor="#C1CDCD"
                android:textSize="20sp" />

            <com.model.tool.view.MTEditTextWithDel
                android:id="@+id/ettel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10sp"
                android:layout_toRightOf="@id/tvtel"
                android:background="@null"
                android:hint="@string/input"
                android:inputType="text"
                android:singleLine="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_edit" >

            <TextView
                android:id="@+id/tvpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/pwd"
                android:textColor="#C1CDCD"
                android:textSize="20sp" />

            <com.model.tool.view.MTEditTextWithDel
                android:id="@+id/etpwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10sp"
                android:layout_toRightOf="@id/tvpwd"
                android:background="@null"
                android:hint="@string/input"
                android:inputType="textPassword"
                android:singleLine="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_edit" >

            <TextView
                android:id="@+id/tvkind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/ukind"
                android:textColor="#C1CDCD"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spkind"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@id/tvkind"
                android:entries="@array/array_ukinds"
                android:prompt="@string/ukind"
                android:spinnerMode="dropdown"
                android:theme="@style/customtitlebar" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/laycar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_edit"
            android:visibility="gone" >

            <TextView
                android:id="@+id/tvcarnumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/carnumber"
                android:textColor="#C1CDCD"
                android:textSize="20sp" />

            <com.model.tool.view.MTEditTextWithDel
                android:id="@+id/etcarnumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10sp"
                android:layout_toRightOf="@id/tvcarnumber"
                android:background="@null"
                android:hint="@string/input"
                android:inputType="text"
                android:singleLine="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/laynode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_edit" 
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/tvnodeaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/nodeaddress"
                android:textColor="#C1CDCD"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/btn07"
                android:text="@string/locate"
                android:textColor="#ffffff"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <com.model.tool.view.MTEditTextWithDel
                android:id="@+id/etnodeaddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_toLeftOf="@id/btnLocation"
                android:layout_toRightOf="@id/tvnodeaddress"
                android:background="@null"
                android:hint="@string/input"
                android:inputType="text"
                android:singleLine="true" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>