<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff" >

    <LinearLayout
        android:id="@+id/lay1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/img_bg"
        android:orientation="horizontal" >
    </LinearLayout>
	<TextView 
	    android:id="@+id/btnSignup"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="20dp"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    />
    <LinearLayout
        android:id="@+id/lay2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay1"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <ImageView
                android:id="@+id/i1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_account"
                tools:ignore="ContentDescription" />

            <com.model.tool.view.MTEditTextWithDel
                android:id="@+id/etid"
                style="@style/input_style_EditTextWithDel"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/i1"
                android:hint="@string/uid"
                android:inputType="text"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <ImageView
                android:id="@+id/i2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_password"
                tools:ignore="ContentDescription" />

            <com.model.tool.view.MTEditTextWithDel
                android:id="@+id/etpwd"
                style="@style/input_style_EditTextWithDel"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/i2"
                android:hint="@string/upwd"
                android:inputType="text"
                />
        </RelativeLayout>

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/btn01"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>